feat: VERBOSE_LEVEL setting (agy - opus 4.6)

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,8 @@ CODEX_MODEL=gpt-5.3-codex
 CODEX_APPROVAL_MODE=never
 CODEX_SANDBOX_MODE=danger-full-access
 
+# Verbosity: 0=quiet (final only), 1=normal (tools+reasoning), 2=detailed (inputs+outputs)
+VERBOSE_LEVEL=1
+
 # Database
 DATABASE_PATH=./data/codex-discord.db
