feat: add verbose levels, message chunking, auto-sync session watcher
- Add VERBOSE_LEVEL env (0=quiet, 1=normal, 2=detailed) to control event output
- Add splitMessage/splitEmbedDescription for Discord 2000-char limit
- Rewrite event-formatter with per-level gating and extraChunks
- Add session-watcher using fs.watch for real-time auto-sync
  - New session files: auto-create Discord channel + thread
  - File modifications: stream new messages to linked thread
- Thread names use first user prompt from session (max 95 chars)
- Add SYNC_ARCHIVED env to control archived session inclusion
- Add getSessionTitle, getByCodexThreadId, per-project sync lock
- Fix startup order (login before command registration)
- Fix Error serialization in Winston logger
- Fix sql.js lastInsertRowId reliability
- Update README with Discord bot setup guide and env table

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,8 @@ CODEX_SANDBOX_MODE=danger-full-access
 # Verbosity: 0=quiet (final only), 1=normal (tools+reasoning), 2=detailed (inputs+outputs)
 VERBOSE_LEVEL=1
 
+# Include archived Codex sessions in sync (default: false)
+SYNC_ARCHIVED=false
+
 # Database
 DATABASE_PATH=./data/codex-discord.db
